fix dropdown icon covered by other element

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -4,7 +4,7 @@
 
 .input-container {
   max-height: 680px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .dropdown-wrapper {
